# MCP-Security

./: README.md  README_CN.md  pyproject.toml
mcp-scan/: LICENSE  README.md  README_CN.md
mcp-scan/example/fetch/: index.ts
mcp-scan/src/mcpscan/core/: extract_description.py  runner.py  source_utils.py
mcp-scan/src/mcpscan/prompts/: stage1_js.md  stage1_py.md  stage2_py.md
src/mcpscan/: __init__.py  cli.py
src/mcpscan/core/: lang_utils.py  llm_bridge.py  semgrep_utils.py  source_utils.py
src/mcpscan/prompts/: stage2_js.md
src/mcpscan/rules/: semgrep-security-js.yml  semgrep-security-py.yml
